Actions
Bug #9570
closedSomething wrong with Enumerator#size ?
Bug #9570:
Something wrong with Enumerator#size ?
Description
enum = 2.step(1, 3)
enum.size #=> 1
It should be 0, shouldn't it? ( Windows )
Actions
Added by taroxd (东 许) over 12 years ago. Updated over 12 years ago.
Description
enum = 2.step(1, 3)
enum.size #=> 1
It should be 0, shouldn't it? ( Windows )
Indeed, I'll fix this asap. Thanks
Applied in changeset r45187.
numeric.c: check signs before division
Hi Nobu.
While I appreciate the intention, why did you fix this while I stated I would and assigned the issue to myself?
Sorry, I did it last night but had no time to commit, and missed to check the latest status this morning.
r45187, r45205, r45212 and r45213 were backported to ruby_2_0_0 at r45250.
r45187, r45205, r45206, r45212 and r45213 were backported into ruby_2_1 at 46226.